Refactor clap-host: module split, ergonomic API, CI & README
  Split monolithic files into focused modules:
  - instance.rs (2746 lines) → instance/{mod,audio,extensions,params,polling,ports,state}.rs
  - host.rs (1303 lines) → host/{mod,callbacks,state,streams}.rs

  Improve public API ergonomics:
  - process_f32/f64: accept &[T] instead of Option<&[T]> for midi/params/expressions
  - Chainable setters: set_parameter, set_sample_rate, on_main_thread return &mut Self
  - Chainable InputEventList: add_midi_events().add_param_changes().sort_by_time()
  - Chainable ParameterQueue::add_point() and ParameterChanges::add_queue()
  - ParamMapping builder replaces 5-parameter set_param_mapping
  - Builders for PluginInfo, ParameterInfo, NoteExpressionValue
  - Color::rgb()/rgba() constructors, Display for PluginInfo

  Code quality improvements:
  - ClapSample trait unifies f32/f64 audio processing (removes ~130 lines duplication)
  - AudioPortFlags/NoteDialects/ParameterFlags use bitflags! with from_bits_truncate
  - is_audio_thread tracks actual audio thread ID instead of any non-main thread
  - cstr_to_string() helper replaces scattered .to_string_lossy().to_string()
  - Tightened lib.rs re-exports (removed internal HostState sub-structs from root)

  Add GitHub Actions CI and README with badges.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,13 @@ version = "0.1.0"
 edition = "2021"
 description = "CLAP plugin hosting library for Rust"
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/AcaciaAudio/clap-host"
+repository = "https://github.com/PoHsuanLai/clap-host"
 keywords = ["clap", "audio", "plugin", "dsp", "host"]
 categories = ["multimedia::audio"]
 readme = "README.md"
 
 [dependencies]
+bitflags = "2"
 clap-sys = "0.5"
 libloading = "0.8"
 smallvec = "1"
